deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    com.docker.project: exostic-com
  name: exostic-com
spec:
  replicas: 1
  selector:
    matchLabels:
      com.docker.project: exostic-com
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        com.docker.project: exostic-com
    spec:
      containers:
        - image: exostic/exostic.com:new
          name: exostic-com
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: '64Mi'
              cpu: '250m'
            limits:
              memory: '128Mi'
              cpu: '500m'
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
