deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: exostic-com
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    com.docker.project: exostic-com
  type: LoadBalancer
