deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exostic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - exostic.com
      secretName: exostic-com
  rules:
    - host: exostic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exostic-com
                port:
                  number: 80
